# DataPipeline

./: .gitignore  README.md  data.csv  docker-compose.yaml  loadCSV.py  pyproject.toml  readCSV.py
airflow/docker/: docker-compose.yaml
airflow/docker/dags/: AirflowCSV.py
ubuntu/: Vagrantfile
